--- a/index.html
+++ b/index.html
@@ -1,113 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Indiana House Rabbit Society</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="css/styles.css" />
-  </head>
 
-  <body>
-    <div class="navHolder">
-      <nav>
-        <div class="homeButton">
-          <a href="#home"
-            ><img src="css/rabbitAssets/icons/rabbitLogoWhite.png" alt=""
-          /></a>
-        </div>
-      </nav>
-    </div>
-    <div class="app">
-      <div class="hero">
-        <div class="heroText">
-          <h1>Indiana House <span>Rabbit</span> Society</h1>
-          <h3>
-            An all-volunteer organization dedicated to improving the lives of
-            domestic rabbits in the state of Indiana.
-          </h3>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Indiana House Rabbit Society</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="css/styles.css" />
+</head>
+
+<body>
+  <div class="navHolder">
+    <nav>
+      <div class="homeButton">
+        <a href="#home"><img src="css/rabbitAssets/icons/rabbitLogoWhite.png" alt="" /></a>
       </div>
-      <!-- SlideShow is a work in progress, JavaScript SUCKS -->
-      <div class="slideShow">
-        <!-- <div class="slide fade">
+    </nav>
+  </div>
+  <div class="app">
+    <div class="hero">
+      <div class="heroText">
+        <h1>Indiana House <span>Rabbit</span> Society</h1>
+        <h3>
+          An all-volunteer organization dedicated to improving the lives of
+          domestic rabbits in the state of Indiana.
+        </h3>
+      </div>
+    </div>
+    <!-- SlideShow is a work in progress, JavaScript SUCKS -->
+    <div class="slideShow">
+      <!-- <div class="slide fade">
           <div class="numberText">1 / 4</div>
           <img src="css/rabbitAssets/personalImages/griff.png" alt="Griffen">
-        </div> -->
-      </div>
-      <div class="threeBoxes">
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-      </div>
-      <div class="ourMission">
-        <div class="missionStatement">
-          <h2>Our Mission</h2>
-          <p>
-            We improve the lives of domestic rabbits through the coordination of
-            local volunteer-driven Education, Rescue, and Adoption efforts in
-            Indiana.
-          </p>
-          <p>To accomplish this goal:</p>
-          <ul>
-            <li>
-              We provide resources to educate the public on the benefits of
-              rabbits as companion animals, rabbit behavior, and rabbit care
-            </li>
-            <li>
-              We provide assistance establishing programs with animal control
-              agencies, shelters, humane societies, and sanctuaries to increase
-              their rabbit adoption rates
-            </li>
-            <li>
-              After we have exhausted all avenues, provided we have the
-              available resources, we coordinate the rescue of rabbits scheduled
-              for euthanasia and adopt them through our group
-            </li>
-          </ul>
-          <p>
-            In order to maximize the usage of all resources towards the goal of
-            reducing homeless rabbits, Indiana House Rabbit Society does not
-            accept rabbits from the public (eg captured stray rabbits, owned
-            rabbits, found rabbits, public rescued rabbits). For help finding a
-            home for a rabbit, see our guidelines for finding a safe home for
-            your rabbit.
-          </p>
-        </div>
-        <div class="logo"></div>
-      </div>
+          </div> -->
     </div>
-    <div class="footer">
-      <footer>
-        <div class="title">
-          <h4>Indiana House Rabbit Society</h4>
+    <div class="threeBoxes">
+      <div class="box">
+        <div class="eventsBox">
+          <h3>Local Events</h3>
+          <div class="event">
+            <p>4/1/2023 10:00 AM <br>
+              <a href="#fidoEvent"><span>FIDO Pet Food Pantry</span></a><br>
+              1505 N Sherman Dr (Indianapolis)
+            </p>
+          </div>
+          <div class="event">
+            <p>
+              4/16/2023 12:00 PM <br>
+              <a href="#spaDay"><span>Spa Day and Hay Sale</span></a><br>
+              55 S State Ave (Indianapolis)
+            </p>
+          </div>
+          <div class="event">
+            <p>
+              5/6/2023 10:00 AM <br>
+              <a href="#foodPantry"><span>FIDO Pet Food Pantry</span></a><br>
+
+              1505 N Sherman Dr (Indianapolis)
+            </p>
+          </div>
+          <div class="event">
+            <p>
+              5/20/2023 12:00 PM <br>
+              <a href="#spaDay"><span>Spa Day and Hay Sale</span></a> <br>
+              55 S State Ave (Indianapolis)
+            </p>
+          </div>
+          <div class="eventsButton">
+            <a href="#events"><span><i class="fa-regular fa-calendar-days"></i> All Events</span></a>
+          </div>
         </div>
-        <div class="copyright">
-          <p>© 2023 Indiana House Rabbits Society. All Rights Reserved</p>
+      </div>
+      <div class="box">
+        <div class="socialsBox">
+          <h3>Our Socials</h3>
+          <div class="socialButtons">
+            <div class="socialButton">
+              <a href="https://www.instagram.com/indianahouserabbitsociety" target="_blank"
+                rel="noopener noreferrer"><span><i class="fa-brands fa-instagram"></i> Instagram</span>
+              </a>
+            </div>
+            <div class="socialButton">
+              <a href="https://twitter.com/indianahrs" target="_blank" rel="noopener noreferrer"><span><i
+                    class="fa-brands fa-twitter"></i> Twitter</span>
+              </a>
+            </div>
+            <div class="socialButton">
+              <a href="https://www.facebook.com/IndianaHouseRabbitSociety/" target="_blank"
+                rel="noopener noreferrer"><span><i class="fa-brands fa-facebook-f"></i> Facebook</span>
+              </a>
+            </div>
+            <div class="socialButton">
+              <a href="#contact"><span><i class="fa-regular fa-envelope"></i> Contact Us</span></a>
+            </div>
+          </div>
+
         </div>
-        <div class="socialLinks">
-          <a
-            href="https://www.facebook.com/IndianaHouseRabbitSociety/"
-            target="_blank"
-            rel="noopener noreferrer"
-            ><i class="fa-brands fa-facebook"></i
-          ></a>
-          <a
-            href="https://www.instagram.com/indianahouserabbitsociety"
-            target="_blank"
-            rel="noopener noreferrer"
-            ><i class="fa-brands fa-square-instagram"></i
-          ></a>
-          <a href=""><i class="fa-brands fa-square-twitter"></i></a>
-        </div>
-      </footer>
+      </div>
+      <div class="box"></div>
     </div>
-  </body>
+    <div class="ourMission">
+      <div class="missionStatement">
+        <h2>Our Mission</h2>
+        <p>
+          We improve the lives of domestic rabbits through the coordination of
+          local volunteer-driven Education, Rescue, and Adoption efforts in
+          Indiana.
+        </p>
+        <p>To accomplish this goal:</p>
+        <ul>
+          <li>
+            We provide resources to educate the public on the benefits of
+            rabbits as companion animals, rabbit behavior, and rabbit care
+          </li>
+          <li>
+            We provide assistance establishing programs with animal control
+            agencies, shelters, humane societies, and sanctuaries to increase
+            their rabbit adoption rates
+          </li>
+          <li>
+            After we have exhausted all avenues, provided we have the
+            available resources, we coordinate the rescue of rabbits scheduled
+            for euthanasia and adopt them through our group
+          </li>
+        </ul>
+        <p>
+          In order to maximize the usage of all resources towards the goal of
+          reducing homeless rabbits, Indiana House Rabbit Society does not
+          accept rabbits from the public (eg captured stray rabbits, owned
+          rabbits, found rabbits, public rescued rabbits). For help finding a
+          home for a rabbit, see our guidelines for finding a safe home for
+          your rabbit.
+        </p>
+      </div>
+      <div class="logo"></div>
+    </div>
+  </div>
+  <div class="footer">
+    <footer>
+      <div class="title">
+        <h4>Indiana House Rabbit Society</h4>
+      </div>
+      <div class="copyright">
+        <p>© 2023 Indiana House Rabbits Society. All Rights Reserved</p>
+      </div>
+      <div class="socialLinks">
+        <a href="https://www.facebook.com/IndianaHouseRabbitSociety/" target="_blank" rel="noopener noreferrer"><i
+            class="fa-brands fa-square-facebook"></i></i></a>
+        <a href="https://www.instagram.com/indianahouserabbitsociety" target="_blank" rel="noopener noreferrer"><i
+            class="fa-brands fa-square-instagram"></i></a>
+        <a href="https://twitter.com/indianahrs" target="_blank" rel="noopener noreferrer"><i
+            class="fa-brands fa-square-twitter"></i></a>
+      </div>
+    </footer>
+  </div>
+</body>
+
 </html>
