Home Page Nearly Done (Work Day 1.75)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,76 @@
   <div class="navHolder">
     <nav>
       <div class="homeButton">
-        <a href="#home"><img src="css/rabbitAssets/icons/rabbitLogoWhite.png" alt="" /></a>
+        <a href="#home"><img src="css/rabbitAssets/icons/rabbitLogoWhite.png" alt="Rabbit Society Logo" /></a>
+      </div>
+      <div class="links">
+        <ul class="menu">
+          <li class="parent">
+            <a href="#">Adoption <span class="expand"></span></a>
+            <ul class="child">
+              <li><a href="#rabbitAdoption">Adopting a Rabbit</a></li>
+              <li><a href="#adoptables">Adoptable Rabbits</a></li>
+              <li><a href="#sanctuary">Sanctuary Rabbits</a></li>
+              <li><a href="#adoptionQuestionnaire">Adoption Questionnaire</a></li>
+            </ul>
+          </li>
+          <li class="parent">
+            <a href="#">Rabbit Care <span class="expand"></span></a>
+            <ul class="child">
+              <li><a href="#rabbitsAsPets">Rabbits As Pets</a></li>
+              <li><a href="#foodAndGreens">Food + Greens</a></li>
+              <li><a href="#housing">Rabbit Housing</a></li>
+              <li><a href="#litter">Rabbit Litter</a></li>
+              <li><a href="#toys">Rabbit Toys</a></li>
+              <li><a href="#vetCare">Vet + Personal Care</a></li>
+              <li><a href="#notEating">Rabbit Not Eating</a></li>
+              <li><a href="#introducingRabbits">Introducing Rabbits</a></li>
+              <li><a href="#rehomingRabbits">Rehoming Rabbits</a></li>
+              <li><a href="#wildRabbits">Wild Rabbits</a></li>
+            </ul>
+          </li>
+          <li class="parent">
+            <a href="#">Resources <span class="expand"></span></a>
+            <ul class="child">
+              <li><a href="#resourcesList">Rabbit Resources</a></li>
+              <li><a href="#supplies">Rabbit Supplies</a></li>
+              <li><a href="#shelters">Shelters</a></li>
+              <li><a href="#veterinarians">Veterinarians</a></li>
+              <li><a href="#kidLinks">Links for Kids</a></li>
+              <li><a href="#faq">FAQ</a></li>
+            </ul>
+          </li>
+          <li class="parent">
+            <a href="#events">Events</a>
+          </li>
+          <li class="parent">
+            <a href="#">Volunteer <span class="expand"></span></a>
+            <ul class="child">
+              <li><a href="#volunteerInfo">Volunteering Information</a></li>
+              <li><a href="#fosterApplication">Foster Care Application</a></li>
+              <li><a href="#logIn">Volunteer Log In</a></li>
+            </ul>
+          </li>
+          <li class="parent">
+            <a href="#">Support Us <span class="expand"></span></a>
+            <ul class="child">
+              <li><a href="#fundraising">Fundraising</a></li>
+              <li><a href="#membership">Become a Member</a></li>
+              <li><a href="https://www.gofundme.com/f/support-ihrs-rescue-rabbits" target="_blank"
+                  rel="noopener noreferrer">GoFundMe Donations</a></li>
+
+              <li><a href="https://www.amazon.com/hz/wishlist/ls/1WWKLVTZ2EHKE?ref_=wl_share" target="_blank"
+                  rel="noopener noreferrer">Amazon Wish List</a></li>
+
+              <li><a href="https://www.chewy.com/g/indiana-house-rabbit-society_b94944993" target="_blank"
+                  rel="noopener noreferrer">Chewy Wish List</a></li>
+
+            </ul>
+          </li>
+          <li class="parent">
+            <a href="#contact">Contact Us</a>
+          </li>
+        </ul>
       </div>
     </nav>
   </div>
@@ -32,28 +101,12 @@
     </div>
     <!-- SlideShow is a work in progress, JavaScript SUCKS -->
     <div class="slideShow">
-      <!-- <div class="slide fade">
-          <div class="numberText">1 / 4</div>
-          <img src="css/rabbitAssets/personalImages/griff.png" alt="Griffen">
-          </div> -->
+
     </div>
     <div class="threeBoxes">
       <div class="box">
         <div class="eventsBox">
           <h3>Local Events</h3>
-          <div class="event">
-            <p>4/1/2023 10:00 AM <br>
-              <a href="#fidoEvent"><span>FIDO Pet Food Pantry</span></a><br>
-              1505 N Sherman Dr (Indianapolis)
-            </p>
-          </div>
-          <div class="event">
-            <p>
-              4/16/2023 12:00 PM <br>
-              <a href="#spaDay"><span>Spa Day and Hay Sale</span></a><br>
-              55 S State Ave (Indianapolis)
-            </p>
-          </div>
           <div class="event">
             <p>
               5/6/2023 10:00 AM <br>
@@ -76,7 +129,7 @@
       </div>
       <div class="box">
         <div class="socialsBox">
-          <h3>Our Socials</h3>
+          <h3>Social Media</h3>
           <div class="socialButtons">
             <div class="socialButton">
               <a href="https://www.instagram.com/indianahouserabbitsociety" target="_blank"
@@ -100,7 +153,28 @@
 
         </div>
       </div>
-      <div class="box"></div>
+      <div class="box">
+        <div class="quickLinks">
+          <h3>Quick Links</h3>
+          <div class="link">
+            <p>
+              Unable to keep your rabbit? <br>
+              <a href="#rehomingGuide"><span> Guidelines for finding your rabbit a safe home</span></a>
+            </p>
+          </div>
+          <div class="link">
+            <p>Found a nest of baby bunnies? <br>
+              <a href="#wildRabbits"><span>Find out What to do with Wild Rabbits</span></a>
+            </p>
+          </div>
+          <div class="link">
+            <p>Want to help? <br>
+              <a href="#fundraising"><span>Become a Member/Volunteer </span></a>
+            </p>
+          </div>
+        </div>
+
+      </div>
     </div>
     <div class="ourMission">
       <div class="missionStatement">
