--- a/index.html
+++ b/index.html
@@ -90,133 +90,101 @@
     </nav>
   </div>
   <div class="app">
-    <div class="hero">
-      <div class="heroText">
-        <h1>Indiana House <span>Rabbit</span> Society</h1>
-        <h3>
-          An all-volunteer organization dedicated to improving the lives of
-          domestic rabbits in the state of Indiana.
-        </h3>
-      </div>
-    </div>
-    <!-- SlideShow is a work in progress, JavaScript SUCKS -->
-    <div class="slideShow">
 
-    </div>
-    <div class="threeBoxes">
-      <div class="box">
-        <div class="eventsBox">
-          <h3>Local Events</h3>
-          <div class="event">
-            <p>
-              5/6/2023 10:00 AM <br>
-              <a href="#foodPantry"><span>FIDO Pet Food Pantry</span></a><br>
-
-              1505 N Sherman Dr (Indianapolis)
-            </p>
-          </div>
-          <div class="event">
-            <p>
-              5/20/2023 12:00 PM <br>
-              <a href="#spaDay"><span>Spa Day and Hay Sale</span></a> <br>
-              55 S State Ave (Indianapolis)
-            </p>
-          </div>
-          <div class="eventsButton">
-            <a href="#events"><span><i class="fa-regular fa-calendar-days"></i> All Events</span></a>
-          </div>
-        </div>
-      </div>
-      <div class="box">
-        <div class="socialsBox">
-          <h3>Social Media</h3>
-          <div class="socialButtons">
-            <div class="socialButton">
-              <a href="https://www.instagram.com/indianahouserabbitsociety" target="_blank"
-                rel="noopener noreferrer"><span><i class="fa-brands fa-instagram"></i> Instagram</span>
-              </a>
-            </div>
-            <div class="socialButton">
-              <a href="https://twitter.com/indianahrs" target="_blank" rel="noopener noreferrer"><span><i
-                    class="fa-brands fa-twitter"></i> Twitter</span>
-              </a>
-            </div>
-            <div class="socialButton">
-              <a href="https://www.facebook.com/IndianaHouseRabbitSociety/" target="_blank"
-                rel="noopener noreferrer"><span><i class="fa-brands fa-facebook-f"></i> Facebook</span>
-              </a>
-            </div>
-            <div class="socialButton">
-              <a href="#contact"><span><i class="fa-regular fa-envelope"></i> Contact Us</span></a>
-            </div>
-          </div>
-
-        </div>
-      </div>
-      <div class="box">
-        <div class="quickLinks">
-          <h3>Quick Links</h3>
-          <div class="link">
-            <p>
-              Unable to keep your rabbit? <br>
-              <a href="#rehomingGuide"><span> Guidelines for finding your rabbit a safe home</span></a>
-            </p>
-          </div>
-          <div class="link">
-            <p>Found a nest of baby bunnies? <br>
-              <a href="#wildRabbits"><span>Find out What to do with Wild Rabbits</span></a>
-            </p>
-          </div>
-          <div class="link">
-            <p>Want to help? <br>
-              <a href="#fundraising"><span>Become a Member/Volunteer </span></a>
-            </p>
-          </div>
-        </div>
-
-      </div>
-    </div>
-    <div class="ourMission">
-      <div class="missionStatement">
-        <h2>Our Mission</h2>
-        <p>
-          We improve the lives of domestic rabbits through the coordination of
-          local volunteer-driven Education, Rescue, and Adoption efforts in
-          Indiana.
-        </p>
-        <p>To accomplish this goal:</p>
+    <div class="section">
+      <div class="textSection">
+        <h1><span>Adopting</span> A Rabbit</h1>
+        <p>The IHRS places rabbits in homes where: <br>
         <ul>
-          <li>
-            We provide resources to educate the public on the benefits of
-            rabbits as companion animals, rabbit behavior, and rabbit care
-          </li>
-          <li>
-            We provide assistance establishing programs with animal control
-            agencies, shelters, humane societies, and sanctuaries to increase
-            their rabbit adoption rates
-          </li>
-          <li>
-            After we have exhausted all avenues, provided we have the
-            available resources, we coordinate the rescue of rabbits scheduled
-            for euthanasia and adopt them through our group
-          </li>
+          <li>The rabbit is the responsibility of an adult</li>
+          <li>The rabbit lives indoors as part of the family</li>
+          <li>The rabbit receives a diet of limited pellets, unlimited hay, and vegetables</li>
+          <li>The rabbit receives regular veterinary care to maintain good health</li>
+          <li>The rabbit is returned to Indiana House Rabbit Society should the family no longer be able to care for the
+            rabbit</li>
         </ul>
-        <p>
-          In order to maximize the usage of all resources towards the goal of
-          reducing homeless rabbits, Indiana House Rabbit Society does not
-          accept rabbits from the public (eg captured stray rabbits, owned
-          rabbits, found rabbits, public rescued rabbits). For help finding a
-          home for a rabbit, see our guidelines for finding a safe home for
-          your rabbit.
+        </p>
+
+      </div>
+      <img src="css/rabbitAssets/personalImages/gizmo.png" alt="Gizmo, a rabbit at the IHRS">
+    </div>
+
+    <div class="section">
+      <img src="css/rabbitAssets/personalImages/griff.png" alt="">
+      <div class="textSection">
+        <h2>Our Adoption Process</h2>
+        <ol>
+          <li>Submit our <span><a href="#questionnaire">Adoption Questionnaire</a></span> </li>
+          <li>Participate in a Zoom consultation</li>
+          <li>Get supplies for your rabbit, or <span><a href="#">purchase a full setup from the IHRS!</a></span></li>
+          <li>Arrange a time for a matchmaking session</li>
+          <li>Sign the adoption contract</li>
+          <li>Pay the adoption fee</li>
+        </ol>
+      </div>
+
+    </div>
+
+    <div class="soloSection">
+      <div class="textSection">
+        <h2>Adoption Fee</h2>
+        <p>The adoption fee is $100 for a single rabbit, and $175 for a bonded pair of rabbits.</p>
+        <p>This fee includes:</p>
+        <ul>
+          <li>Rabbit spay/neuter surgery and any necessary vet care</li>
+          <li>One small bag of hay</li>
+          <li>One small bag of pellets</li>
+          <li>Indiana House Rabbit Society as an ongoing resource during your rabbit's life.</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="section">
+      <div class="textSection">
+        <h2>Finding a Mate for Your Rabbit</h2>
+        <ol>
+          <li>Submit our <span><a href="#questionnaire">Adoption Questionnaire</a></span></li>
+          <li>Participate in a Zoom consultation</li>
+          <li>Arrange a time to attend a bunny date <br>
+            <p>(IHRS Volunteers will help introduce your
+              bunny to the other bunnies, and help
+              find a good match)
+            </p>
+          </li>
+          <li>Sign the adoption contract</li>
+          <li>Pay the adoption fee</li>
+
+        </ol>
+      </div>
+      <img src="css/rabbitAssets/personalImages/rabbitMates.png" alt="">
+    </div>
+
+    <div class="soloSection">
+      <div class="textSection">
+        <h2>Our Adoptables</h2>
+        <p>IHRS Adoptable Rabbits are:
+        <ul>
+          <li>Rescued from Shelters/Abandoned strays rescued from certain death</li>
+          <li>Screened by a veterinarian at the time of rescue and treated for any illness</li>
+          <li>Spayed or neutered prior to placement</li>
+          <li>Housed in foster homes and socialized by family members</li>
+          <li>Litterbox trained</li>
+          <li>Given a minimum 14 hours of supervised exercise per week</li>
+          <li>Evaluated for temperament to ensure the best match in their adoptive home</li>
+        </ul>
         </p>
       </div>
-      <div class="logo"></div>
+      <div class="adoptablesButton">
+        <a href="#adoptables"><span>View Our Adoptable Rabbits</span></a>
+      </div>
     </div>
+
+
   </div>
   <div class="footer">
     <footer>
       <div class="title">
-        <h4>Indiana House Rabbit Society</h4>
+        <h4>Indiana House <br> Rabbit Society</h4>
       </div>
       <div class="copyright">
         <p>© 2023 Indiana House Rabbits Society. All Rights Reserved</p>
