--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Indiana House Rabbit Society</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -89,95 +90,9 @@
       </div>
     </nav>
   </div>
-  <div class="app">
 
-    <div class="section">
-      <div class="textSection">
-        <h1><span>Adopting</span> A Rabbit</h1>
-        <p>The IHRS places rabbits in homes where: <br>
-        <ul>
-          <li>The rabbit is the responsibility of an adult</li>
-          <li>The rabbit lives indoors as part of the family</li>
-          <li>The rabbit receives a diet of limited pellets, unlimited hay, and vegetables</li>
-          <li>The rabbit receives regular veterinary care to maintain good health</li>
-          <li>The rabbit is returned to Indiana House Rabbit Society should the family no longer be able to care for the
-            rabbit</li>
-        </ul>
-        </p>
-
-      </div>
-      <img src="css/rabbitAssets/personalImages/gizmo.png" alt="Gizmo, a rabbit at the IHRS">
-    </div>
-
-    <div class="section">
-      <img src="css/rabbitAssets/personalImages/griff.png" alt="">
-      <div class="textSection">
-        <h2>Our Adoption Process</h2>
-        <ol>
-          <li>Submit our <span><a href="#questionnaire">Adoption Questionnaire</a></span> </li>
-          <li>Participate in a Zoom consultation</li>
-          <li>Get supplies for your rabbit, or <span><a href="#">purchase a full setup from the IHRS!</a></span></li>
-          <li>Arrange a time for a matchmaking session</li>
-          <li>Sign the adoption contract</li>
-          <li>Pay the adoption fee</li>
-        </ol>
-      </div>
-
-    </div>
-
-    <div class="soloSection">
-      <div class="textSection">
-        <h2>Adoption Fee</h2>
-        <p>The adoption fee is $100 for a single rabbit, and $175 for a bonded pair of rabbits.</p>
-        <p>This fee includes:</p>
-        <ul>
-          <li>Rabbit spay/neuter surgery and any necessary vet care</li>
-          <li>One small bag of hay</li>
-          <li>One small bag of pellets</li>
-          <li>Indiana House Rabbit Society as an ongoing resource during your rabbit's life.</li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="section">
-      <div class="textSection">
-        <h2>Finding a Mate for Your Rabbit</h2>
-        <ol>
-          <li>Submit our <span><a href="#questionnaire">Adoption Questionnaire</a></span></li>
-          <li>Participate in a Zoom consultation</li>
-          <li>Arrange a time to attend a bunny date <br>
-            <p>(IHRS Volunteers will help introduce your
-              bunny to the other bunnies, and help
-              find a good match)
-            </p>
-          </li>
-          <li>Sign the adoption contract</li>
-          <li>Pay the adoption fee</li>
-
-        </ol>
-      </div>
-      <img src="css/rabbitAssets/personalImages/rabbitMates.png" alt="">
-    </div>
-
-    <div class="soloSection">
-      <div class="textSection">
-        <h2>Our Adoptables</h2>
-        <p>IHRS Adoptable Rabbits are:
-        <ul>
-          <li>Rescued from Shelters/Abandoned strays rescued from certain death</li>
-          <li>Screened by a veterinarian at the time of rescue and treated for any illness</li>
-          <li>Spayed or neutered prior to placement</li>
-          <li>Housed in foster homes and socialized by family members</li>
-          <li>Litterbox trained</li>
-          <li>Given a minimum 14 hours of supervised exercise per week</li>
-          <li>Evaluated for temperament to ensure the best match in their adoptive home</li>
-        </ul>
-        </p>
-      </div>
-      <div class="adoptablesButton">
-        <a href="#adoptables"><span>View Our Adoptable Rabbits</span></a>
-      </div>
-    </div>
+  <div id="app"> </div>
+  
 
 
   </div>
@@ -199,6 +114,8 @@
       </div>
     </footer>
   </div>
+  <script type="module" src="lib/jquery-3.6.4.min.js"></script>
+  <script type="module" src="app/app.js"></script>
 </body>
 
 </html>
