--- a/index.html
+++ b/index.html
@@ -91,8 +91,34 @@
     </nav>
   </div>
 
-  <div id="app"> </div>
-  
+  <!-- <div id="app"> </div> -->
+  <div class="questionnaire">
+    <div class="intro">
+      <h1>Rabbit Adoption <span>Questionnaire</span></h1>
+      <p>Thank you for your interest in adopting a homeless rabbit! The goal of IHRS' adoption program is to match
+        rabbits
+        with families to best accommodate the needs and interests of both. Please complete the following application so
+        we
+        can get to know you better and to begin the adoption process.</p>
+
+      <h2>The Adoption Process</h2>
+      <p>Once you complete this questionnaire, you will receive an email with the next steps and more information. Once
+        you have reviewed the information and replied to the email per the instructions, you will sign up for an
+        adoption
+        consultation either via the email you received or the screen you view after the submission of this
+        questionnaire.
+      </p>
+      <div class="note">
+        <span>Note:</span>
+        <p>Failure to take this step will be considered as a withdrawl from the process.</p>
+      </div>
+
+      <p>After you schedule and complete your consultation, the IHRS will help schedule a meet and greet between you and
+        some of our rabbits that match you and your family!</p>
+    </div>
+  </div>
+
+
 
 
   </div>
