--- a/pages/adoptables.html
+++ b/pages/adoptables.html
@@ -1,6 +1,6 @@
 <div class="adoptables">
     <h1>Our <span>Adoptables</span></h1>
-    <div class="adoptableProfile">
+    <div class="profile">
 
       <div class="left">
         <h3>Akua</h3>
@@ -25,7 +25,7 @@
         </div>
       </div>
     </div>
-    <div class="adoptableProfile">
+    <div class="profile">
 
       <div class="left">
         <h3>Akua</h3>
@@ -50,7 +50,7 @@
         </div>
       </div>
     </div>
-    <div class="adoptableProfile">
+    <div class="profile">
 
       <div class="left">
         <h3>Akua</h3>
