--- a/index.html
+++ b/index.html
@@ -116,6 +116,45 @@
       <p>After you schedule and complete your consultation, the IHRS will help schedule a meet and greet between you and
         some of our rabbits that match you and your family!</p>
     </div>
+    <div class="form">
+      <h2>Personal Information</h2>
+      <div class="multipleInput row">
+        <div class="input">
+          <h3>First Name</h3>
+          <textarea name="First Name" id="" cols="30" rows="2"></textarea>
+        </div>
+        <div class="input">
+          <h3>Last Name</h3>
+          <textarea name="Last Name" id="" cols="30" rows="2"></textarea>
+        </div>
+      </div>
+      <div class="row">
+        <h3>Address</h3>
+        <textarea name="Address" id="" cols="30" rows="10"></textarea>
+      </div>
+      <div class="row">
+        <h3>City</h3>
+        <textarea name="Address" id="" cols="30" rows="10"></textarea>
+      </div>
+      <div class="multipleInput row">
+        <div class="input">
+          <h3>State</h3>
+          <textarea name="state" id="" cols="30" rows="2"></textarea>
+        </div>
+        <div class="input">
+          <h3>Zip Code</h3>
+          <textarea name="zipCode" id="" cols="30" rows="10"></textarea>
+        </div>
+        <div class="input">
+          <h3>Country</h3>
+          <textarea name="county" id="" cols="30" rows="10"></textarea>
+        </div>
+
+
+
+      </div>
+
+    </div>
   </div>
 
 
