--- a/index.html
+++ b/index.html
@@ -92,71 +92,37 @@
   </div>
 
   <!-- <div id="app"> </div> -->
-  <div class="questionnaire">
-    <div class="intro">
-      <h1>Rabbit Adoption <span>Questionnaire</span></h1>
-      <p>Thank you for your interest in adopting a homeless rabbit! The goal of IHRS' adoption program is to match
-        rabbits
-        with families to best accommodate the needs and interests of both. Please complete the following application so
-        we
-        can get to know you better and to begin the adoption process.</p>
 
-      <h2>The Adoption Process</h2>
-      <p>Once you complete this questionnaire, you will receive an email with the next steps and more information. Once
-        you have reviewed the information and replied to the email per the instructions, you will sign up for an
-        adoption
-        consultation either via the email you received or the screen you view after the submission of this
-        questionnaire.
-      </p>
-      <div class="note">
-        <span>Note:</span>
-        <p>Failure to take this step will be considered as a withdrawl from the process.</p>
-      </div>
+  <div class="rabbitBio">
 
-      <p>After you schedule and complete your consultation, the IHRS will help schedule a meet and greet between you and
-        some of our rabbits that match you and your family!</p>
+    <div class="info">
+      <h3>[Rabbit Name]</h3>
+      <p> <span>Breed:</span> [Rabbit Breed]</p>
+      <p> <span>Sex:</span> [Rabbit Sex]</p>
+      <p> <span>Age:</span> [Rabbit Age]</p>
+      <p> <span>Weight:</span> [Rabbit Weight]</p>
+      <img src="css/rabbitAssets/rabbitImages/Akua.png" alt="Akua's Profile Picture">
     </div>
-    <div class="form">
-      <h2>Personal Information</h2>
-      <div class="multipleInput row">
-        <div class="input">
-          <h3>First Name</h3>
-          <textarea name="First Name" id="" cols="30" rows="2"></textarea>
-        </div>
-        <div class="input">
-          <h3>Last Name</h3>
-          <textarea name="Last Name" id="" cols="30" rows="2"></textarea>
-        </div>
-      </div>
-      <div class="row">
-        <h3>Address</h3>
-        <textarea name="Address" id="" cols="30" rows="10"></textarea>
-      </div>
-      <div class="row">
-        <h3>City</h3>
-        <textarea name="Address" id="" cols="30" rows="10"></textarea>
-      </div>
-      <div class="multipleInput row">
-        <div class="input">
-          <h3>State</h3>
-          <textarea name="state" id="" cols="30" rows="2"></textarea>
-        </div>
-        <div class="input">
-          <h3>Zip Code</h3>
-          <textarea name="zipCode" id="" cols="30" rows="10"></textarea>
-        </div>
-        <div class="input">
-          <h3>Country</h3>
-          <textarea name="county" id="" cols="30" rows="10"></textarea>
-        </div>
+    <div class="bio">
+      <h4>Bio</h4>
+      <p>
+        I'm Akua and I'm new here! I was found running loose for at least a month, it was cold out and hard to find
+        food! I'm happy to be a house rabbit now. <br>
 
-
-
-      </div>
-
+        I am a very sweet bunny and very curious. I love my run time! My foster family says I can be shy at first and
+        may take a little more time warming up to a person. Once I warm up, I want attention and enjoy being petted!
+      </p>
+      <h4>
+        Want to Adopt Me?
+      </h4>
+      <p>To adopt me, or any of the rabbits at the IHRS, please fill out our <a
+          href="pages/adoptionQuestionnaire.html"><span>Adoption Questionnaire</span></a></p>
+    </div>
+    <div class="images">
+      <img src="css/rabbitAssets/rabbitImages/Akua.png" alt="">
+      <img src="css/rabbitAssets/rabbitImages/Akua.png" alt="">
     </div>
   </div>
-
 
 
 
