--- a/index.html
+++ b/index.html
@@ -91,39 +91,7 @@
     </nav>
   </div>
 
-  <!-- <div id="app"> </div> -->
-
-  <div class="rabbitBio">
-
-    <div class="info">
-      <h3>[Rabbit Name]</h3>
-      <p> <span>Breed:</span> [Rabbit Breed]</p>
-      <p> <span>Sex:</span> [Rabbit Sex]</p>
-      <p> <span>Age:</span> [Rabbit Age]</p>
-      <p> <span>Weight:</span> [Rabbit Weight]</p>
-      <img src="css/rabbitAssets/rabbitImages/Akua.png" alt="Akua's Profile Picture">
-    </div>
-    <div class="bio">
-      <h4>Bio</h4>
-      <p>
-        I'm Akua and I'm new here! I was found running loose for at least a month, it was cold out and hard to find
-        food! I'm happy to be a house rabbit now. <br>
-
-        I am a very sweet bunny and very curious. I love my run time! My foster family says I can be shy at first and
-        may take a little more time warming up to a person. Once I warm up, I want attention and enjoy being petted!
-      </p>
-      <h4>
-        Want to Adopt Me?
-      </h4>
-      <p>To adopt me, or any of the rabbits at the IHRS, please fill out our <a
-          href="pages/adoptionQuestionnaire.html"><span>Adoption Questionnaire</span></a></p>
-    </div>
-    <div class="images">
-      <img src="css/rabbitAssets/rabbitImages/Akua.png" alt="">
-      <img src="css/rabbitAssets/rabbitImages/Akua.png" alt="">
-    </div>
-  </div>
-
+  <div id="app"> </div>
 
 
   </div>
@@ -146,6 +114,8 @@
     </footer>
   </div>
   <script type="module" src="lib/jquery-3.6.4.min.js"></script>
+  <script type="module" src="hugeArray.js"></script>
+  <script type="module" src="services/services.js   "></script>
   <script type="module" src="app/app.js"></script>
 </body>
 
