--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Indiana House Rabbit Society</title>
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="css/rabbitAssets/icons/favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -114,7 +114,7 @@
     </footer>
   </div>
   <script type="module" src="lib/jquery-3.6.4.min.js"></script>
-  <script type="module" src="hugeArray.js"></script>
+  <script type="module" src="rabbitArrays.js"></script>
   <script type="module" src="services/services.js   "></script>
   <script type="module" src="app/app.js"></script>
 </body>
