--- a/pages/sanctuary.html
+++ b/pages/sanctuary.html
@@ -6,84 +6,12 @@
         House Rabbit Society's care. They are provided endless love, long-term care and support.</p>
 
       <div class="sponsorButton">
-        <a href=""><span><i class="fa-regular fa-heart"></i>Sponsor a Rabbit</span></a>
+        <a href="https://www.gofundme.com/f/support-ihrs-rescue-rabbits"target="_blank"><span><i class="fa-regular fa-heart"></i>Sponsor a Rabbit</span></a>
       </div>
     </div>
     <img src="css/rabbitAssets/personalImages/sanctuary.png" alt="">
   </div>
-  <div class="profile">
-
-    <div class="left">
-      <h3>Akua</h3>
-      <img src="css/rabbitAssets/rabbitImages/Akua.png" alt="">
-      <p><span>Breed:</span> Dwarf Mix</p>
-      <p><span>Sex:</span> Female</p>
-      <p><span>Age:</span> 8 Months</p>
-      <p><span>Weight:</span> 4 Pounds</p>
-    </div>
-    <div class="right">
-      <div class="bio">
-        <p>I'm Akua and I'm new here! I was found running loose for at least a month, it was cold out and hard to find
-          food! I'm happy to be a house rabbit now.</p>
-
-        <p>I am a very sweet bunny and very curious. I love my run time! My foster family says I can be shy at first
-          and may take a little more time warming up to a person. Once I warm up, I want attention and enjoy being
-          petted!</p>
-        </p>
-      </div>
-      <div class="bioButton">
-        <a href="#akuaBio"><span>View My Bio!</span></a>
-      </div>
-    </div>
-  </div>
-  <div class="profile">
-
-    <div class="left">
-      <h3>Akua</h3>
-      <img src="css/rabbitAssets/rabbitImages/Akua.png" alt="">
-      <p><span>Breed:</span> Dwarf Mix</p>
-      <p><span>Sex:</span> Female</p>
-      <p><span>Age:</span> 8 Months</p>
-      <p><span>Weight:</span> 4 Pounds</p>
-    </div>
-    <div class="right">
-      <div class="bio">
-        <p>I'm Akua and I'm new here! I was found running loose for at least a month, it was cold out and hard to find
-          food! I'm happy to be a house rabbit now.</p>
-
-        <p>I am a very sweet bunny and very curious. I love my run time! My foster family says I can be shy at first
-          and may take a little more time warming up to a person. Once I warm up, I want attention and enjoy being
-          petted!</p>
-        </p>
-      </div>
-      <div class="bioButton">
-        <a href="#akuaBio"><span>View My Bio!</span></a>
-      </div>
-    </div>
-  </div>
-  <div class="profile">
-
-    <div class="left">
-      <h3>Akua</h3>
-      <img src="css/rabbitAssets/rabbitImages/Akua.png" alt="">
-      <p><span>Breed:</span> Dwarf Mix</p>
-      <p><span>Sex:</span> Female</p>
-      <p><span>Age:</span> 8 Months</p>
-      <p><span>Weight:</span> 4 Pounds</p>
-    </div>
-    <div class="right">
-      <div class="bio">
-        <p>I'm Akua and I'm new here! I was found running loose for at least a month, it was cold out and hard to find
-          food! I'm happy to be a house rabbit now.</p>
-
-        <p>I am a very sweet bunny and very curious. I love my run time! My foster family says I can be shy at first
-          and may take a little more time warming up to a person. Once I warm up, I want attention and enjoy being
-          petted!</p>
-        </p>
-      </div>
-      <div class="bioButton">
-        <a href="#akuaBio"><span>View My Bio!</span></a>
-      </div>
-    </div>
+  <div id="sanctuary">
+    
   </div>
 </div>
