--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <a href="#">Volunteer <span class="expand"></span></a>
             <ul class="child">
               <li><a href="#volunteerInfo">Volunteering Information</a></li>
-              <li><a href="#fosterApplication">Foster Care Application</a></li>
+              <!-- <li><a href="#fosterApplication">Foster Care Application</a></li> -->
               <li><a href="#logIn">Volunteer Log In</a></li>
             </ul>
           </li>
