--- a/pages/rabbitAdoption.html
+++ b/pages/rabbitAdoption.html
@@ -14,11 +14,11 @@
       </p>
 
     </div>
-    <img src="css/rabbitAssets/personalImages/gizmo.png" alt="Gizmo, a rabbit at the IHRS">
+    <img src="css/rabbitAssets/rabbitimages/gizmo.png" alt="Gizmo, a rabbit at the IHRS">
   </div>
 
   <div class="section">
-    <img src="css/rabbitAssets/personalImages/griff.png" alt="">
+    <img src="css/rabbitAssets/personalImages/griff.png" alt="Griff, a rabbit at the IHRS">
     <div class="textSection">
       <h2>Our Adoption Process</h2>
       <ol>
