--- a/pages/home.html
+++ b/pages/home.html
@@ -18,7 +18,7 @@
         <div class="event">
           <p>
             5/6/2023 10:00 AM <br>
-            <a href="#foodPantry"><span>FIDO Pet Food Pantry</span></a><br>
+            <a href="#fido"><span>FIDO Pet Food Pantry</span></a><br>
 
             1505 N Sherman Dr (Indianapolis)
           </p>
