--- a/pages/home.html
+++ b/pages/home.html
@@ -1,4 +1,5 @@
-<div class="hero">
+<div class="homeWrapper">
+  <div class="hero">
     <div class="heroText">
       <h1>Indiana House <span>Rabbit</span> Society</h1>
       <h3>
@@ -7,10 +8,18 @@
       </h3>
     </div>
   </div>
-  <!-- SlideShow is a work in progress, JavaScript SUCKS -->
-  <!-- <div class="slideShow"> -->
-
+<div class="rotd">
+  <div class="text">
+    <h3>Rabbit of the Day:</h3>
+  <p>Today's Rabbit of the Day is Rebel!</p>
+  <p>Learn more about Rebel by clicking <a href="#rabbitBio"><span>Here</span></a> or start the adoption process by <a href="#adoptionQuestionnaire"><span>Submitting Our Adoption Questionnaire!</span></a></p>
   </div>
+  <div class="rabbitPic">
+    <img src="../css/rabbitAssets/rabbitImages/Rebel.png" alt="Rebel, a rabbit at the IHRS.">
+  </div>
+  
+</div>
+
   <div class="threeBoxes">
     <div class="box">
       <div class="eventsBox">
@@ -120,3 +129,4 @@
     </div>
     <div class="logo"></div>
   </div>
+</div>
