--- a/pages/loggedIn.html
+++ b/pages/loggedIn.html
@@ -1,6 +1,6 @@
 <div class="loggedIn">
     <h1>Did you really think <span>I</span> could make a LOG IN PAGE?</h1>
-    <p>This is actually the <span>CRAB PAGE</span></p>
+    <p>This is actually the <span>CRAB PAGE!!!</span></p>
     <div class="crab">
         <img src="../css/rabbitAssets/Placeholder/crab.jpg" alt="crab">
         <img src="../css/rabbitAssets/Placeholder/crab.jpg" alt="crab">
