--- a/pages/home.html
+++ b/pages/home.html
@@ -8,17 +8,20 @@
       </h3>
     </div>
   </div>
-<div class="rotd">
-  <div class="text">
-    <h3>Rabbit of the Day:</h3>
-  <p>Today's Rabbit of the Day is Rebel!</p>
-  <p>Learn more about Rebel by clicking <a href="#rabbitBio"><span>Here</span></a> or start the adoption process by <a href="#adoptionQuestionnaire"><span>Submitting Our Adoption Questionnaire!</span></a></p>
+  <div class="rotd">
+    <div class="text">
+      <h3>Rabbit of the Day:</h3>
+      <p>Today's Rabbit of the Day is Rebel!</p>
+      <p>Learn more about Rebel by clicking <a href="#rabbitBio"><span>Here</span></a> or start the adoption process
+        by <a href="#adoptionQuestionnaire"><span>Submitting Our Adoption Questionnaire!</span></a></p>
+    </div>
+    <div class="rabbitPic">
+      <img src="../css/rabbitAssets/rabbitImages/Rebel.png" alt="Rebel, a rabbit at the IHRS.">
+    </div>
+
   </div>
-  <div class="rabbitPic">
-    <img src="../css/rabbitAssets/rabbitImages/Rebel.png" alt="Rebel, a rabbit at the IHRS.">
-  </div>
-  
-</div>
+
+
 
   <div class="threeBoxes">
     <div class="box">
