--- a/pages/events.html
+++ b/pages/events.html
@@ -1,5 +1,5 @@
 <div class="events">
-    <h1>Event Calendar</h1>
+    <h1>Event Calendar (April 2023)</h1>
     <div class="calendar">
         <div class="headers">
             <div class="header">
@@ -175,5 +175,45 @@
             </div>
         </div>
 
+    </div>
+    <div class="eventList">
+        <div class="eventDay">
+            <h2>April 1st</h2>
+            <ul>
+                <li>
+                    <p>April Fool's Day</p>
+                </li>
+                <li>
+                    <a href="#fido"><span>FIDO Pet Food Pantry (10:00 AM - 2:00 PM)</span></a>
+                </li>
+            </ul>
+        </div>
+        <div class="eventDay">
+            <h2>April 8th</h2>
+            <ul>
+                <li>
+                    <p>Carmel Community Easter Egg Hunt (12 PM)</p>
+                </li>
+            </ul>
+        </div>
+        <div class="eventDay">
+            <h2>April 16th</h2>
+            <ul>
+                <li>
+                    <a href="#spaDay"><span>Spa Day/Hay Sale (12:00 PM - 3:00 PM)</span></a>
+                </li>
+            </ul>
+        </div>
+        <div class="eventDay">
+            <h2>April 22nd</h2>
+            <ul>
+                <li>
+                    <p>Evan's Birthday <i class="fa-regular fa-face-smile"></i> </p>
+                </li>
+                <li>
+                    <p>Creation Fest (10:00 AM - 2:00 PM)</p>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
