--- a/pages/home.html
+++ b/pages/home.html
@@ -8,20 +8,8 @@
       </h3>
     </div>
   </div>
-  <div class="rotd">
-    <div class="text">
-      <h3>Rabbit of the Day:</h3>
-      <p>Today's Rabbit of the Day is Rebel!</p>
-      <p>Learn more about Rebel by clicking <a href="#rabbitBio"><span>Here</span></a> or start the adoption process
-        by <a href="#adoptionQuestionnaire"><span>Submitting Our Adoption Questionnaire!</span></a></p>
-    </div>
-    <div class="rabbitPic">
-      <img src="../css/rabbitAssets/rabbitImages/Rebel.png" alt="Rebel, a rabbit at the IHRS.">
-    </div>
 
-  </div>
-
-
+  
 
   <div class="threeBoxes">
     <div class="box">
@@ -96,6 +84,21 @@
 
     </div>
   </div>
+
+<div class="rotd">
+    <div class="text">
+      <h3>Rabbit of the Day:</h3>
+      <p>Today's Rabbit of the Day is Rebel!</p>
+      <p>"Hi, I'm Rebel! I found myself at the city shelter and then came to rescue when I wasn't feeling so good. They got me fixed up and now I'm excited to start the next part of my life with a new family! I'm curious and playful, though I can be just a bit shy when I first meet you. I'm getting better with my litterbox too! I'm a little teeny girl and am super duper adorable!"</p>
+      <p>Learn more about Rebel by clicking <a href="#rabbitBio"><span>Here</span></a> or start the adoption process
+        by <a href="#adoptionQuestionnaire"><span>Submitting Our Adoption Questionnaire!</span></a></p>
+    </div>
+    <div class="rabbitPic">
+      <img src="../css/rabbitAssets/rabbitImages/Rebel.png" alt="Rebel, a rabbit at the IHRS.">
+    </div>
+
+  </div>
+
   <div class="ourMission">
     <div class="missionStatement">
       <h2>Our Mission</h2>
