--- a/pages/spaDay.html
+++ b/pages/spaDay.html
@@ -9,7 +9,10 @@
 
             <p>To return to the event calendar, click <a href="#events">Here</a></p>
         </div>
-        <img src="../css/rabbitAssets/personalImages/rabbitFlyer.png" alt="">
+        <div class="img">
+            <img src="../css/rabbitAssets/personalImages/rabbitFlyer.png" alt="">
+        </div>
+        
     </div>
 
 </div>
