--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
           <li class="parent">
             <a href="#">Resources <span class="expand"></span></a>
             <ul class="child">
-              <li><a href="#resourcesList">Rabbit Resources</a></li>
-              <li><a href="#supplies">Rabbit Supplies</a></li>
+              <li><a href="#supplyResources">Rabbit Supplies</a></li>
               <li><a href="#shelters">Shelters</a></li>
               <li><a href="#veterinarians">Veterinarians</a></li>
               <li><a href="#faq">FAQ</a></li>
@@ -113,7 +112,7 @@
   </div>
   <script type="module" src="lib/jquery-3.6.4.min.js"></script>
   <script type="module" src="rabbitArrays.js"></script>
-  <script type="module" src="services/services.js   "></script>
+  <script type="module" src="services/services.js"></script>
   <script type="module" src="app/app.js"></script>
 </body>
 
