Day 12 (WHOOOOO BOY)
Added ALL BIO/SANCTUARY PAGES
Changed some styling on pages
Added FAQ page

(Some of this work will be undone over the summer, as I plan on making the rabbit functions work completely)

--- a/pages/rabbitAdoption.html
+++ b/pages/rabbitAdoption.html
@@ -22,7 +22,7 @@
     <div class="textSection">
       <h2>Our Adoption Process</h2>
       <ol>
-        <li>Submit our <span><a href="#questionnaire">Adoption Questionnaire</a></span> </li>
+        <li>Submit our <span><a href="#adoptionQuestionnaire">Adoption Questionnaire</a></span> </li>
         <li>Participate in a Zoom consultation</li>
         <li>Get supplies for your rabbit, or <span><a href="#">purchase a full setup from the IHRS!</a></span></li>
         <li>Arrange a time for a matchmaking session</li>
@@ -51,7 +51,7 @@
     <div class="textSection">
       <h2>Finding a Mate for Your Rabbit</h2>
       <ol>
-        <li>Submit our <span><a href="#questionnaire">Adoption Questionnaire</a></span></li>
+        <li>Submit our <span><a href="#adoptionQuestionnaire">Adoption Questionnaire</a></span></li>
         <li>Participate in a Zoom consultation</li>
         <li>Arrange a time to attend a bunny date <br>
           <p>(IHRS Volunteers will help introduce your
