--- a/pages/adoptionQuestionnaire.html
+++ b/pages/adoptionQuestionnaire.html
@@ -1,64 +1,247 @@
 <div class="questionnaire">
-    <div class="intro">
-      <h1>Rabbit Adoption <span>Questionnaire</span></h1>
-      <p>Thank you for your interest in adopting a homeless rabbit! The goal of IHRS' adoption program is to match
-        rabbits
-        with families to best accommodate the needs and interests of both. Please complete the following application so
-        we
-        can get to know you better and to begin the adoption process.</p>
+  <div class="intro">
+    <h1>Rabbit Adoption <span>Questionnaire</span></h1>
+    <p>Thank you for your interest in adopting a homeless rabbit! The goal of IHRS' adoption program is to match
+      rabbits
+      with families to best accommodate the needs and interests of both. Please complete the following application so
+      we
+      can get to know you better and to begin the adoption process.</p>
 
-      <h2>The Adoption Process</h2>
-      <p>Once you complete this questionnaire, you will receive an email with the next steps and more information. Once
-        you have reviewed the information and replied to the email per the instructions, you will sign up for an
-        adoption
-        consultation either via the email you received or the screen you view after the submission of this
-        questionnaire.
-      </p>
-      <div class="note">
-        <span>Note:</span>
-        <p>Failure to take this step will be considered as a withdrawl from the process.</p>
-      </div>
-
-      <p>After you schedule and complete your consultation, the IHRS will help schedule a meet and greet between you and
-        some of our rabbits that match you and your family!</p>
+    <h2>The Adoption Process</h2>
+    <p>Once you complete this questionnaire, you will receive an email with the next steps and more information. Once
+      you have reviewed the information and replied to the email per the instructions, you will sign up for an
+      adoption
+      consultation either via the email you received or the screen you view after the submission of this
+      questionnaire.
+    </p>
+    <div class="note">
+      <span>Note:</span>
+      <p>Failure to take this step will be considered as a withdrawl from the process.</p>
     </div>
-    <div class="form">
-      <h2>Personal Information</h2>
-      <div class="multipleInput row">
-        <div class="input">
-          <h3>First Name</h3>
-          <textarea name="First Name" id="" cols="30" rows="2"></textarea>
-        </div>
-        <div class="input">
-          <h3>Last Name</h3>
-          <textarea name="Last Name" id="" cols="30" rows="2"></textarea>
-        </div>
-      </div>
-      <div class="row">
-        <h3>Address</h3>
-        <textarea name="Address" id="" cols="30" rows="10"></textarea>
-      </div>
-      <div class="row">
-        <h3>City</h3>
-        <textarea name="Address" id="" cols="30" rows="10"></textarea>
-      </div>
-      <div class="multipleInput row">
-        <div class="input">
-          <h3>State</h3>
-          <textarea name="state" id="" cols="30" rows="2"></textarea>
-        </div>
-        <div class="input">
-          <h3>Zip Code</h3>
-          <textarea name="zipCode" id="" cols="30" rows="10"></textarea>
-        </div>
-        <div class="input">
-          <h3>Country</h3>
-          <textarea name="county" id="" cols="30" rows="10"></textarea>
-        </div>
 
+    <p>After you schedule and complete your consultation, the IHRS will help schedule a meet and greet between you and
+      some of our rabbits that match you and your family!</p>
+  </div>
+  <div class="form">
+    <h2>IHRS Adoption Questionairre</h2>
+    <div class="multipleInput row">
+      <div class="input">
+        <h3>First Name</h3>
+        <input name="First Name" id="" cols="30" rows="2"></input>
+      </div>
+      <div class="input">
+        <h3>Last Name</h3>
+        <input name="Last Name" id="" cols="30" rows="2"></input>
+      </div>
+    </div>
+    <div class="row">
+      <h3>Email Address</h3>
+      <input type="email" name="email" id="" cols="30" rows="10"></input>
+    </div>
+    <div class="row">
+      <h3>Phone Number</h3>
+      <input name="Address" id="" cols="30" rows="10"></input>
+    </div>
+    <div class="row">
+      <h3>Address</h3>
+      <input name="Address" id="" cols="30" rows="10"></input>
+    </div>
+    <div class="row">
+      <h3>City</h3>
+      <input name="Address" id="" cols="30" rows="10"></input>
+    </div>
+    <div class="multipleInput row">
 
-
+      <div class="input">
+        <h3>State</h3>
+        <select>
+          <option></option>
+          <option value="AL">
+            Alabama
+          </option>
+          <option value="AK">
+            Alaska
+          </option>
+          <option value="AZ">
+            Arizona
+          </option>
+          <option value="AR">
+            Arkansas
+          </option>
+          <option value="CA">
+            California
+          </option>
+          <option value="CO">
+            Colorado
+          </option>
+          <option value="CT">
+            Connecticut
+          </option>
+          <option value="DE">
+            Delaware
+          </option>
+          <option value="DC">
+            District Of Columbia
+          </option>
+          <option value="FL">
+            Florida
+          </option>
+          <option value="GA">
+            Georgia
+          </option>
+          <option value="GU">
+            Guam
+          </option>
+          <option value="HI">
+            Hawaii
+          </option>
+          <option value="ID">
+            Idaho
+          </option>
+          <option value="IL">
+            Illinois
+          </option>
+          <option value="IN">
+            Indiana
+          </option>
+          <option value="IA">
+            Iowa
+          </option>
+          <option value="KS">
+            Kansas
+          </option>
+          <option value="KY">
+            Kentucky
+          </option>
+          <option value="LA">
+            Louisiana
+          </option>
+          <option value="ME">
+            Maine
+          </option>
+          <option value="MD">
+            Maryland
+          </option>
+          <option value="MA">
+            Massachusetts
+          </option>
+          <option value="MI">
+            Michigan
+          </option>
+          <option value="MN">
+            Minnesota
+          </option>
+          <option value="MS">
+            Mississippi
+          </option>
+          <option value="MO">
+            Missouri
+          </option>
+          <option value="MT">
+            Montana
+          </option>
+          <option value="NE">
+            Nebraska
+          </option>
+          <option value="NV">
+            Nevada
+          </option>
+          <option value="NH">
+            New Hampshire
+          </option>
+          <option value="NJ">
+            New Jersey
+          </option>
+          <option value="NM">
+            New Mexico
+          </option>
+          <option value="NY">
+            New York
+          </option>
+          <option value="NC">
+            North Carolina
+          </option>
+          <option value="ND">
+            North Dakota
+          </option>
+          <option value="OH">
+            Ohio
+          </option>
+          <option value="OK">
+            Oklahoma
+          </option>
+          <option value="OR">
+            Oregon
+          </option>
+          <option value="PA">
+            Pennsylvania
+          </option>
+          <option value="RI">
+            Rhode Island
+          </option>
+          <option value="SC">
+            South Carolina
+          </option>
+          <option value="SD">
+            South Dakota
+          </option>
+          <option value="TN">
+            Tennessee
+          </option>
+          <option value="TX">
+            Texas
+          </option>
+          <option value="UT">
+            Utah
+          </option>
+          <option value="VT">
+            Vermont
+          </option>
+          <option value="VA">
+            Virginia
+          </option>
+          <option value="WA">
+            Washington
+          </option>
+          <option value="WV">
+            West Virginia
+          </option>
+          <option value="WI">
+            Wisconsin
+          </option>
+          <option value="WY">
+            Wyoming
+          </option>
+        </select>
       </div>
 
+      <div class="input">
+        <h3>Zip Code</h3>
+        <input name="zipCode" id="" cols="30" rows="10"></input>
+      </div>
+    </div>
+    <div class="row">
+      <h3>If you have chosen a rabbit, please write their name below:</h3>
+      <input type="text">
+    </div>
+    <div class="note row">
+      <h3><span>Note:</span>The IHRS can not promise that your chosen rabbit is the best fit for your family, and a
+        different rabbit may be suggested to you. Once you click submit, an IHRS volunteer will contact you with more details.</h3>
+    </div>
+
+    <div class="captcha">
+      <img src="../css/rabbitAssets/Placeholder/captcha.png" alt="">
+    </div>
+
+    <div class="submitButton">
+      <a href="#submitted"><span>Submit</span></a>
+    </div>
+    <div class="disclaimer">
+      <h2>
+        Final Note:</h2>
+      <p>The fee paid at the point of adoption, $100 for a single rabbit and $175 for a bonded pair, is nonrefundable. After adoption is completed, all expenses (inducing medical expenses) are solely the adopter's responsibility. Indiana House Rabbit Society may deny adoption.</p>
+      <p></p>
+      <p>To complete this questionnaire, please double check your information and click the submit button below. For more information on the adoption process, please see our <a href="#rabbitAdoption">adopting a rabbit page.</a>  If you have more questions, do not hesitate to contact us at (317)-767-7636 or info@indianahrs.org</p>
     </div>
   </div>
+</div>
