--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <li><a href="#adoptionQuestionnaire">Adoption Questionnaire</a></li>
             </ul>
           </li>
-          <li class="parent">
+          <!-- <li class="parent">
             <a href="#">Rabbit Care <span class="expand"></span></a>
             <ul class="child">
               <li><a href="#rabbitsAsPets">Rabbits As Pets</a></li>
@@ -44,7 +44,7 @@
               <li><a href="#rehomingRabbits">Rehoming Rabbits</a></li>
               <li><a href="#wildRabbits">Wild Rabbits</a></li>
             </ul>
-          </li>
+          </li> -->
           <li class="parent">
             <a href="#">Resources <span class="expand"></span></a>
             <ul class="child">
