--- a/pages/faq.html
+++ b/pages/faq.html
@@ -250,6 +250,7 @@
 
     </div>
     <div class="section" id="rabbitHealth">
+        <h2>Rabbit Health Questions</h2>
         <h3>Why spay and neuter rabbits?
         </h3>
         <p>
