--- a/pages/fido.html
+++ b/pages/fido.html
@@ -1,4 +1,7 @@
 <div class="eventPage">
+    <div class="return">
+        <a href="#events"><i class="fa-solid fa-arrow-left"></i></a>
+      </div>
     <div class="content">
         <div class="text">
             <h1>FIDO Pet Food Pantry</h1>
