--- a/pages/rabbitAdoption.html
+++ b/pages/rabbitAdoption.html
@@ -24,7 +24,7 @@
       <ol>
         <li>Submit our <span><a href="#adoptionQuestionnaire">Adoption Questionnaire</a></span> </li>
         <li>Participate in a Zoom consultation</li>
-        <li>Get supplies for your rabbit, or <span><a href="#">purchase a full setup from the IHRS!</a></span></li>
+        <li>Get supplies for your rabbit, or <span><a href="https://indianahrs.org/rabbit-care/housing-setups" target="none">purchase a full setup from the IHRS!</a></span></li>
         <li>Arrange a time for a matchmaking session</li>
         <li>Sign the adoption contract</li>
         <li>Pay the adoption fee</li>
