--- a/pages/veterinarians.html
+++ b/pages/veterinarians.html
@@ -9,13 +9,10 @@
         The following list is being provided to help ease your search. These Indiana veterinarians have either been
         recommended by house rabbit caregivers or have been prescreened from the yellow pages or shelter referrals.
         Their presence on this list does not constitute an endorsement by either the National House Rabbit Society or
-        this Indiana chapter... they are just possible places to start. <br> <br>
+        this Indiana chapter... they are just possible places to start.</p>
 
-        It is up to you to find the veterinarian who best meets your needs in regards to experience, knowledge,
-        personality, location and price.</p>
-
-    <h3>For more information please see <a href="https://www.petfinder.com/" target="none">this article </a>from the
-        national House Rabbit Society website.</h3>
+    <h3> It is up to you to find the veterinarian who best meets your needs in regards to experience, knowledge,
+        personality, location and price.</h3>
 
     <p> Rather than just relying solely on your veterinarian, it is important to be proactive with your rabbit's health
         care. There are many good sources available to help you learn the latest in disease prevention and treatment
@@ -79,7 +76,7 @@
         <div class="vet">
             <h2>Tracy Eichenseer, D.V.M.
             </h2>
-            <p>Tracy Eichenseer, D.V.M. <br> <br>
+            <p>
                 Kryder Veterinary Clinic, P.C.<br> <br>
                 13471 SR 23<br> <br>
                 Granger, IN 46530<br> <br>
