--- a/pages/fido.html
+++ b/pages/fido.html
@@ -10,7 +10,7 @@
                     rel="noopener noreferrer">FIDO's Website</a>.</p>
             <p>To return to the event calendar, click <a href="#events">Here</a></p>
         </div>
-        <img src="../css/rabbitAssets/outsideImages/fidoLogo.png" alt="">
+        <img src="css/rabbitAssets/outsideImages/fidoLogo.png" alt="">
     </div>
 
 </div>
