--- a/pages/home.html
+++ b/pages/home.html
@@ -66,8 +66,8 @@
         <h3>Quick Links</h3>
         <div class="link">
           <p>
-            Unable to keep your rabbit? <br>
-            <a href="#rehomingGuide"><span> Guidelines for finding your rabbit a safe home</span></a>
+            Need a Rabbit Veterinarian? <br>
+            <a href="#veterinarians"><span> Guidelines for finding your rabbit a safe home</span></a>
           </p>
         </div>
         <div class="link">
@@ -77,7 +77,7 @@
         </div>
         <div class="link">
           <p>Want to help? <br>
-            <a href="#fundraising"><span>Become a Member/Volunteer </span></a>
+            <a href="#volunteerInfo"><span>Volunteer for the IHRS </span></a>
           </p>
         </div>
       </div>
