--- a/pages/spaDay.html
+++ b/pages/spaDay.html
@@ -10,7 +10,7 @@
             <p>To return to the event calendar, click <a href="#events">Here</a></p>
         </div>
         <div class="img">
-            <img src="../css/rabbitAssets/personalImages/rabbitFlyer.png" alt="">
+            <img src="css/rabbitAssets/personalImages/rabbitFlyer.png" alt="">
         </div>
         
     </div>
