--- a/pages/adoptionQuestionnaire.html
+++ b/pages/adoptionQuestionnaire.html
@@ -230,7 +230,7 @@
     </div>
 
     <div class="captcha">
-      <img src="../css/rabbitAssets/Placeholder/captcha.png" alt="">
+      <img src="css/rabbitAssets/placeholder/captcha.png" alt="">
     </div>
 
     <div class="submitButton">
