--- a/pages/contact.html
+++ b/pages/contact.html
@@ -80,8 +80,7 @@
             <textarea name="Message" placeholder="Mesage..." cols="30" rows="6"></textarea>
         </div>
         <div class="captcha">
-            <img src="../css/rabbitAssets/placeholder/captcha.png"
-                alt="This is where a captcha would go... if I HAD ONE">
+            <img src="css/rabbitAssets/placeholder/captcha.png">
         </div>
         <div class="button">
             <button><a href="#submitted"><span>Submit</span></a></button>
