--- a/pages/rabbitAdoption.html
+++ b/pages/rabbitAdoption.html
@@ -14,11 +14,11 @@
       </p>
 
     </div>
-    <img src="css/rabbitAssets/rabbitImages/gizmo.png" alt="Gizmo, a rabbit at the IHRS">
+    <img src="css/rabbitAssets/rabbitImages/dhalia2.png" alt="Dhalia, a rabbit at the IHRS">
   </div>
 
   <div class="section">
-    <img src="css/rabbitAssets/rabbitImages/Lofte.png" alt="Griffen, a rabbit at the IHRS">
+    <img src="css/rabbitAssets/rabbitImages/Lofte.png" alt="Lofte, a rabbit at the IHRS">
     <div class="textSection">
       <h2>Our Adoption Process</h2>
       <ol>
