--- a/pages/adoptionQuestionnaire.html
+++ b/pages/adoptionQuestionnaire.html
@@ -23,7 +23,7 @@
       some of our rabbits that match you and your family!</p>
   </div>
   <div class="form">
-    <h2>IHRS Adoption Questionairre</h2>
+    <h2>IHRS Adoption Questionnaire</h2>
     <div class="multipleInput row">
       <div class="input">
         <h3>First Name</h3>
