--- a/pages/home.html
+++ b/pages/home.html
@@ -94,7 +94,7 @@
         by <a href="#adoptionQuestionnaire"><span>Submitting Our Adoption Questionnaire!</span></a></p>
     </div>
     <div class="rabbitPic">
-      <img src="../css/rabbitAssets/rabbitImages/Rebel.png" alt="Rebel, a rabbit at the IHRS.">
+      <img src="css/rabbitAssets/rabbitImages/Rebel.png" alt="Rebel, a rabbit at the IHRS.">
     </div>
 
   </div>
