--- a/pages/loggedIn.html
+++ b/pages/loggedIn.html
@@ -2,8 +2,8 @@
     <h1>Did you really think <span>I</span> could make a LOG IN PAGE?</h1>
     <p>This is actually the <span>CRAB PAGE!!!</span></p>
     <div class="crab">
-        <img src="../css/rabbitAssets/placeholder/crab.jpg" alt="crab">
-        <img src="../css/rabbitAssets/placeholder/crab.jpg" alt="crab">
+        <img src="css/rabbitAssets/placeholder/crab.jpg" alt="crab">
+        <img src="css/rabbitAssets/placeholder/crab.jpg" alt="crab">
     </div>
 
 </div>
