--- a/pages/membership.html
+++ b/pages/membership.html
@@ -18,7 +18,7 @@
                 process your request.</p>
         </div>
         <div class="image">
-            <img src="../css/rabbitAssets/personalImages/memberFlyer.jpg" alt="">
+            <img src="css/rabbitAssets/personalImages/memberFlyer.jpg" alt="">
         </div>
     </div>
     <div class="section">
@@ -224,7 +224,7 @@
                 <p>A Memebrship is a one time fee of <span>$25</span>.</p>
             </div>
             <div class="captcha">
-                <img src="../css/rabbitAssets/Placeholder/captcha.png" alt="">
+                <img src="css/rabbitAssets/placeholder/captcha.png" alt="">
             </div>
 
             <div class="purchaseButton">
