--- a/pages/volunteerInfo.html
+++ b/pages/volunteerInfo.html
@@ -42,7 +42,7 @@
         </div>
     </div>
     <div class="img">
-        <img src="../css/rabbitAssets/icons/evLogoDesign.png" alt="">
+        <img src="css/rabbitAssets/icons/evLogoDesign.png" alt="My IHRS logo design">
     </div>
     </div>
     
