Final Finishing Touches
(Please, I've been fixing so many dumb errors and it is  t h r e e  a m )

--- a/pages/home.html
+++ b/pages/home.html
@@ -67,17 +67,17 @@
         <div class="link">
           <p>
             Need a Rabbit Veterinarian? <br>
-            <a href="#veterinarians"><span> Guidelines for finding your rabbit a safe home</span></a>
+            <a href="#veterinarians"><span> IHRS' List of Vets</span></a>
           </p>
         </div>
         <div class="link">
-          <p>Found a nest of baby bunnies? <br>
-            <a href="#wildRabbits"><span>Find out What to do with Wild Rabbits</span></a>
+          <p>Looking at Shelters? <br>
+            <a href="#shelters"><span>Find a shelter near you!</span></a>
           </p>
         </div>
         <div class="link">
           <p>Want to help? <br>
-            <a href="#volunteerInfo"><span>Volunteer for the IHRS </span></a>
+            <a href="#volunteerInfo"><span>Volunteer for the IHRS! </span></a>
           </p>
         </div>
       </div>
@@ -90,7 +90,7 @@
       <h3>Rabbit of the Day:</h3>
       <p>Today's Rabbit of the Day is Rebel!</p>
       <p>"Hi, I'm Rebel! I found myself at the city shelter and then came to rescue when I wasn't feeling so good. They got me fixed up and now I'm excited to start the next part of my life with a new family! I'm curious and playful, though I can be just a bit shy when I first meet you. I'm getting better with my litterbox too! I'm a little teeny girl and am super duper adorable!"</p>
-      <p>Learn more about Rebel by clicking <a href="#rabbitBio"><span>Here</span></a> or start the adoption process
+      <p>Learn more about Rebel by clicking <a href="#bio28"><span>Here</span></a> or start the adoption process
         by <a href="#adoptionQuestionnaire"><span>Submitting Our Adoption Questionnaire!</span></a></p>
     </div>
     <div class="rabbitPic">
@@ -133,6 +133,8 @@
         your rabbit.
       </p>
     </div>
-    <div class="logo"></div>
+    <div class="logo">
+      <img src="css/rabbitAssets/icons/evLogoDesign.png" alt="">
+    </div>
   </div>
 </div>
