--- a/pages/submitted.html
+++ b/pages/submitted.html
@@ -6,5 +6,5 @@
         </h2>
         <h2>Click <span><a href="#"> here</a> </span>to return to the homepage</h2>
     </div>
-    <img src="../css/rabbitAssets/icons/EvLogoDesign.png" alt="IHRS Logo">
+    <img src="css/rabbitAssets/icons/evLogoDesign.png" alt="IHRS Logo">
 </div>
